# scoreboard

./: Cargo.toml  README.md  Shuttle.toml
public/: index.html  packet.js
public/host/: index.html  script.js  style.css
public/join/: index.html  script.js  style.css
public/view/: index.html  script.js  style.css
src/: game.rs  host.rs  main.rs  packet.rs  session_manager.rs  user.rs  view.rs
