[package]
name = "scoreboard5071"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
shuttle-axum = "0.42.0"
shuttle-runtime = { version = "0.42.0", default-features = false }
tokio = { version = "1.28.2", features = ["sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
rand = "0.8.4"
futures = "0.3"
serde = "1.0.197"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

