[package]
name = "scoreboard5071"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
rand = "0.8.4"
futures = "0.3"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"

